# directional_avg_calculator

./: CMakeLists.txt  DirectionAvg.cpp  DirectionAvg.h  Main.qml  README.md  directionavgtest.cpp  directionavgtest.h  main.cpp
